--- a/app/views/meetings/index.html.erb
+++ b/app/views/meetings/index.html.erb
@@ -1,36 +1,60 @@
-<p style="color: green"><%= notice %></p>
+<div class="flex-col w-full">
+  <p style="color: green"><%= notice %></p>
 
-<h1>Meetings</h1>
+  <h1 class="text-2xl font-bold mb-10">Meetings</h1>
 
-<% start_date = params.fetch(:start_date, Date.today).to_date %>
-<% date_range = (start_date.beginning_of_month.beginning_of_week..start_date.end_of_month.end_of_week).to_a %>
+  <% start_date = params.fetch(:start_date, Date.today).to_date %>
 
-<table>
-  <thead>
-  <tr>
-    <% date_range.slice(0, 7).each do |day| %>
-      <th><%= I18n.t('date.abbr_day_names')[day.wday] %></th>
-    <% end %>
-  </tr>
-  </thead>
-  <tbody>
-  <% date_range.each_slice(7) do |week| %>
+<%# calculation for the agenda %>
+  <% date_range = (start_date..(start_date + 3.days)).to_a %>
+
+<%# calculation for the week %>
+<%# date_range = (start_date.beginning_of_week..start_date.end_of_week).to_a %>
+
+<%# calculation for the month %>
+<%# date_range = (start_date.beginning_of_month.beginning_of_week..start_date.end_of_month.end_of_week).to_a %>
+
+  <div class="w-full flex justify-between mb-8">
+    <%= link_to '<- Previous', start_date: date_range.first - 1.day %>
+    <%= I18n.t('date.month_names')[start_date.month] %> <%= start_date.year %>
+    <%= link_to 'Next ->', start_date: date_range.last + 1.day %>
+  </div>
+
+  <table class="table-auto mb-10 w-full">
+    <thead>
     <tr>
-      <% week.each do |day| %>
-        <td><%= day %></td>
+      <% date_range.slice(0, 7).each do |day| %>
+        <th><%= I18n.t('date.abbr_day_names')[day.wday] %></th>
       <% end %>
     </tr>
-  <% end %>
-  </tbody>
-</table>
+    </thead>
+    <tbody>
+    <% date_range.each_slice(7) do |week| %>
+      <tr>
+        <% week.each do |day| %>
+          <td class="text-center">
+            <%= day %>
+            <% current_day_meetings = @meetings.select { |meeting| meeting.start_time.to_date == day } %>
+            <% current_day_meetings.sort_by(&:start_time).each do |meeting| %>
+              <div><%= link_to meeting.name, meeting %></div>
+            <% end %>
+          </td>
+        <% end %>
+      </tr>
+    <% end %>
+    </tbody>
+  </table>
 
-<div id="meetings">
-  <% @meetings.each do |meeting| %>
-    <%= render meeting %>
-    <p>
-      <%= link_to "Show this meeting", meeting %>
-    </p>
-  <% end %>
+  <div id="meetings" class="mb-10">
+    <% @meetings.each do |meeting| %>
+      <div class="mb-4">
+        <%= render meeting %>
+        <p>
+          <%= link_to "Show this meeting", meeting %>
+        </p>
+      </div>
+    <% end %>
+  </div>
+
+  <%= link_to "New meeting", new_meeting_path %>
 </div>
-
-<%= link_to "New meeting", new_meeting_path %>
